name:                streaming-utils
version:             0.1.0.0
synopsis:            Experimental http-client, attoparsec and pipes utilities streaming and streaming-bytestring
description:         Experimental http-client, attoparsec and pipes utilities streaming and streaming-bytestring

license:             BSD3
license-file:        LICENSE
author:              michaelt
maintainer:          what_is_it_to_do_anything@yahoo.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Attoparsec.ByteString.Streaming,
                       Data.ByteString.Streaming.HTTP,
                       Streaming.Pipes
  -- other-modules:       
  other-extensions:    CPP, Trustworthy
  
  build-depends:       base >=4.7 && <4.9, 
                       bytestring >=0.10 && <0.11, 
                       transformers >=0.4 && <0.5, 
                       mtl >=2.2 && <2.3,
                       attoparsec,
                       streaming,
                       streaming-bytestring,
                       pipes >= 4.0 && < 4.2,
                       http-client >=0.2 && <0.5, 
                       http-client-tls <0.3
                       
                      
  -- hs-source-dirs:      
  default-language:    Haskell2010